<resources>
    <string name="app_name">Steri Touch</string>
    <string name="office_name">Office Name</string>
    <string name="pin">PIN</string>
    <string name="login">Login</string>
    <string name="blank" />
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="sterilization_portal">STERILIZATION PORTAL</string>
    <string name="todo">TODO</string>
    <string name="office_login">Office Login</string>
    <string name="forgot_password_instructions">Enter the following information below to reset your office PIN</string>
    <string name="serial_number">Serial Number*</string>
    <string name="license_number">License Number*</string>
    <string name="license_number_">License Number</string>
    <string name="new_pin">New PIN*</string>
    <string name="repeat_pin">Repeat PIN*</string>
    <string name="reset_pin">Reset PIN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sterilization">STERILIZATION</string>
    <string name="sterilization_small">Sterilization</string>
    <string name="b_i_test">Biological Indicator Test</string>
    <string name="reporting">Reporting</string>
    <string name="help_center">HELP CENTER</string>
    <string name="about_us">ABOUT US</string>
    <string name="change_language">CHANGE LANGUAGE</string>
    <string name="cleaning_method">Cleaning Method</string>
    <string name="select_cleaning_method">Select Cleaning Method</string>
    <string name="select_package_number_and_type_present">Select Package, Number and Type Present</string>
    <string name="enter_scan_package_barcode">Enter/Scan Package Barcode(s)</string>
    <string name="type">Type</string>
    <string name="select_operator">Select Operator</string>
    <string name="select_autoclave">Select Autoclave</string>
    <string name="cycle_number">Cycle Number</string>
    <string name="upload_log">Upload Log</string>
    <string name="from_iot">From Iot</string>
    <string name="cycle_date">Cycle Date</string>
    <string name="enter_values_for_temperature_and_pressure">Enter values for temperature and pressure with their units. C/F for temperature and PSI/KPA for pressure</string>
    <string name="maximum_temperature">Max Temperature</string>
    <string name="maximum_pressure">Max Pressure</string>
    <string name="chemical_indicator_pass">Chemical Indicator</string>
    <string name="enter_ci_lot">C.I. Lot#</string>
    <string name="submit">Submit</string>
    <string name="biological_indicator_test_result">Biological Indicator Test Result</string>
    <string name="select_b_i_test_operator">B.I. Test Operator</string>
    <string name="b_i_spot_test_result">B. I. Spot Test Result</string>
    <string name="enter_b_i_lot_number">B. I. Lot Number</string>
    <string name="type_1_test_pass">Type 1 Test</string>
    <string name="type_4_test_pass">Type 4 Test</string>
    <string name="type_5_test_pass">Type 5 Test</string>
    <string name="help">HELP</string>
    <string name="training">TRAINING</string>
    <string name="documentation">DOCUMENTATION</string>
    <string name="manual">MANUAL</string>
    <string name="training_instructions">Onsite Training\nAs part of the installation process, a comprehensive training will take place for\nkey office staff,
        followed by two weeks of close monitoring by Smart Software team members.\n\nRemote Training and Documents\nAfter the initial training, remote training
        is available 24/7 for any issues that may\ndevelop or questions that may arise. Remote training will also be available for upgrade to the system at no
        additional cost.\nUser Manual(in parts, Login, Cycle, BI Test etc</string>
    <string name="pdf_reader">PDF Reader</string>
    <string name="select_document_to_open">Select Document to Open</string>
    <string name="open_document">Open Document</string>
    <string name="about_us_details">For your patients, your team and your clinic!\nThe sterilization portal is one stop for all sterilization logs.\nCycle number,
        temperature and pressure, Lot # and type of load, BI test and additional data in one software.\n\nPrint cycle and create unique barcode for every cycle.
        \nScan the barcode and attach to client file in your system. Smart Software builds software solution of the dental business.</string>
    <string name="sterilization_report">Sterilization Report</string>
    <string name="daily">Daily</string>
    <string name="date_range">Date Range</string>
    <string name="autoclave">Autoclave</string>
    <string name="barcode">Barcode</string>
    <string name="generate_daily_reports">Generate Daily Reports</string>
    <string name="select_date">Select Date</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="generate_date_range_report">Generate Date Range Report</string>
    <string name="generate_date_range_reports">Generate Date Range Reports</string>
    <string name="generate_reports_by_barcode">Generate Reports by Barcode</string>
    <string name="generate_report">Generate Report</string>
    <string name="enter_or_scan_barcode">Enter or Scan Barcode</string>
    <string name="enter_manager_initials_to_sign_report">Enter manager initials to sign report</string>
    <string name="enter_email_addresses">Enter email addresses</string>
    <string name="email_notes">To email report to multiple emails, separate email with a comma. E.g abc@gmail.com, def@hotmail.com</string>
    <string name="share_report">Share Report</string>
    <string name="save_report">Save Report</string>
    <string name="clean_method">Clean Method</string>
    <string name="package_count">Package Count</string>
    <string name="package_information">Package Information</string>
    <string name="autoclave_name">Autoclave Name</string>
    <string name="autoclave_manufacturer">Autoclave Manufacturer</string>
    <string name="autoclave_model">Autoclave Model</string>
    <string name="sterilization_duration">Sterilization Duration</string>
    <string name="bowie_dick_test">Bowie Dick Test</string>
    <string name="chemical_test_lot">Chemical Test/Lot #</string>
    <string name="cycle_time">Cycle Time</string>
    <string name="cycle_operator">Cycle Operator</string>
    <string name="biological_indicator_test_information">Biological Indicator Test Information</string>
    <string name="b_i_test_lot">B.I. Test Lot#</string>
    <string name="type_1_test_result_status">Type 1 Test Status:</string>
    <string name="type_4_test_result_status">Type 4 Test Status:</string>
    <string name="type_5_test_result_status">Type 5 Test Status:</string>
    <string name="b_i_test_time">B. I. Test Time</string>
    <string name="b_i_test_date">Select B. I. Test Date</string>
    <string name="b_i_test_operator">B. I. Test Operator</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="b_i_result">B. I. Status</string>
    <string name="cancel">Cancel</string>
    <string name="street_address">Street Address</string>
    <string name="unit_number">Unit Number</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="province">Province</string>
    <string name="country">Country</string>
    <string name="office_email">Office Email</string>
    <string name="telephone">Telephone</string>
    <string name="report_email">Report Email</string>
    <string name="update_information">Update Information</string>
    <string name="office_pin">Office PIN</string>
    <string name="email">Email</string>
    <string name="support_expiry_date">Support Expiry Date</string>
    <string name="click_here_to_renew_support_license">Click here to renew support license</string>
    <string name="add_new_autoclave">Add new autoclave</string>
    <string name="add_autoclave_instructions">To add a new autoclave, please have your autoclave serial number ready.</string>
    <string name="name">Name</string>
    <string name="model">Model</string>
    <string name="select_type">Select Type</string>
    <string name="log_directory">Log Directory</string>
    <string name="browse">Browse</string>
    <string name="modify_autoclave">Modify Autoclave</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add_autoclave">Add Autoclave</string>
    <string name="update_autoclave">Update Autoclave</string>
    <string name="directory">Directory</string>
    <string name="add_new_operator">Add New Operator</string>
    <string name="please_provide_the_operator_his_her_pin">Please provide the operator his/her PIN.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="modify_operator">Modify Operator</string>
    <string name="reset_data">Reset Data</string>
    <string name="data_reset">Data Reset</string>
    <string name="data_reset_instructions">This process will delete ALL your STERILIZATION CYCLE LOGS recorded. This process is IRREVERSIBLE, you won\'t recover your sterilization cycle logs once deleted unless from a backup.</string>
    <string name="date_data_reset">Date Data Reset</string>
    <string name="data_reset_by_date">Data Reset by Date</string>
    <string name="date_data_reset_instructions">This process will delete ALL your STERILIZATION CYCLE LOGS recorded between the SELECTED START DATE and the SELECTED END DATE. This process id IRREVERSIBLE, your won\'t be able to recover your sterilization cycle logs once deleted.</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="package_text">Package</string>
    <string name="sterilization_operator">Sterilization Operator</string>
    <string name="biological_indicator_operator">Biological Indicator Operator</string>
    <string name="test_status">Test Status</string>
    <string name="select_package">Select Package</string>
    <string name="select_b_i_test_status">Select B. I. Test, Cycle Temperature, Cycle Pressure Status</string>
    <string name="get_report">Get Report</string>
    <string name="select_sterilization_operator">Select Sterilization Operator</string>
    <string name="info_email">info@sterismart.ca</string>
    <string name="support_telephone">Telephone Support\n(905)997–7171</string>
    <string name="training_support">Training\nFor additional training, please contact our office at (905) 997–7171</string>
    <string name="documentation_support">Documentation will be added very soon. If you need\nhelp, please contact us at (905) 997–7171</string>
    <string name="manual_support">Online user manual</string>
    <string name="pdf_manual_support">PDF user manual for download</string>
    <string name="faq_for_users">FAQ for users.</string>
    <string name="create_new_package">Create New Package</string>
    <string name="modify_package">Modify Package</string>
    <string name="view_package">View Package</string>
    <string name="select_instruments_to_add">Select Instruments to Add</string>
    <string name="instruments_in_package">Instrument(s) in Package</string>
    <string name="add">Add</string>
    <string name="pass">Pass</string>
    <string name="fail">Fail</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="autoclave_setup">Autoclave Setup</string>
    <string name="packaging_amp_labeling">Packaging &amp; Labeling</string>
    <string name="operators">Operator Setup</string>
    <string name="settings">Settings</string>
    <string name="packages_setup">Packages Setup</string>
    <string name="sterilization_process">Sterilization Process</string>
    <string name="log_management">Advanced Log Management Portal</string>
</resources>