<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:padding="20dp"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@color/dark_red"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:padding="20dp"
        android:text="@string/manufacturer"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@id/model"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/model"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:padding="20dp"
        android:text="@string/model"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@id/type"
        app:layout_constraintStart_toEndOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/name" />


    <TextView
        android:id="@+id/type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:padding="20dp"
        android:text="@string/type"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@id/edit"
        app:layout_constraintStart_toEndOf="@id/model"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <ImageView
        android:id="@+id/edit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_edit"
        app:layout_constraintEnd_toStartOf="@id/delete"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/delete"
        android:padding="10dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/todo"
        android:src="@android:drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

</androidx.constraintlayout.widget.ConstraintLayout>