<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/select_package"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_b_i_test_status"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/black"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/status_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_package">

        <RadioButton
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center_vertical"
            android:text="@string/pass"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="@color/dark_green"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/fail"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="@color/red"
            android:textStyle="bold" />

    </RadioGroup>

    <TextView
        android:id="@+id/enter_initials_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/enter_manager_initials_to_sign_report"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@android:color/black"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/initials"
        app:layout_constraintEnd_toStartOf="@id/initials"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/initials" />

    <EditText
        android:id="@+id/initials"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/blank"
        android:background="@drawable/edit_text_bottom_line"
        android:hint="@string/blank"
        android:inputType="text"
        android:minWidth="300dp"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@id/get_report"
        app:layout_constraintStart_toEndOf="@id/enter_initials_text"
        app:layout_constraintTop_toBottomOf="@id/status_group" />

    <Button
        android:id="@+id/get_report"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:padding="10dp"
        android:text="@string/get_report"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/initials"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/initials" />

    <FrameLayout
        android:id="@+id/report_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/initials" />

</androidx.constraintlayout.widget.ConstraintLayout>