<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_bg">

    <TextView
        android:id="@+id/choose_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/choose_language"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_language">

        <RadioButton
            android:id="@+id/english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:checked="true"
            android:text="@string/english"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/french"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/french"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/submit"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_selector"
        android:padding="10dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/language"
        app:layout_constraintTop_toTopOf="@id/language" />

</androidx.constraintlayout.widget.ConstraintLayout>